<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fl_Main"
        style="@style/frameLayoutMain.port"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"

            style="@style/imageViewProps"

            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/stormtrooper" />

        <TextView
            android:id="@+id/tv_textAppears"

            style="@style/frameLayoutTextViewMain" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="245dp"
        android:text="@string/background_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_Main" />

    <RadioGroup
        android:id="@+id/bgColorChange_rg"
        android:layout_width="224dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="168dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton_fl1"

            style="@style/radioBtnBackgroundColorSelector"
            android:text="@string/purple" />

        <RadioButton
            android:id="@+id/radioButton_fl2"

            style="@style/radioBtnBackgroundColorSelector"
            android:text="@string/green" />

        <RadioButton
            android:id="@+id/radioButton_fl3"

            style="@style/radioBtnBackgroundColorSelector"

            android:text="@string/black" />
    </RadioGroup>

    <EditText
        android:id="@+id/changeText_editText"
        android:layout_width="186dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="209dp"
        android:ems="10"
        android:hint="@string/display_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgColorChange_rg"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeText_editText" />

    <RadioGroup
        android:id="@+id/textColorChange_rg"
        android:layout_width="230dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioButton_tv1"
            style="@style/radioBtnBackgroundColorSelector"

            android:text="@string/purple" />

        <RadioButton
            android:id="@+id/radioButton_tv2"
            style="@style/radioBtnBackgroundColorSelector"

            android:text="@string/green" />

        <RadioButton
            android:id="@+id/radioButton_tv3"
            style="@style/radioBtnBackgroundColorSelector"

            android:text="@string/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_style"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textColorChange_rg" />

    <Switch
        android:id="@+id/bold_Swtich"
        android:layout_width="86dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>